# xc

./: .gitignore  README.md
.claude/: launch.json
core/: pyproject.toml
core/examples/: auth.xc
core/tests/: test_core.py
core/xc/: __init__.py  cli.py  core.py  edit.py  parser.py
docs/: agents.html  cli.html  demo.js  editor.html  index.html  style.css
git-integration/: setup-xc-diff.sh
mcp/: mcp_config.example.json  pyproject.toml
mcp/examples/: langchain_client.py
mcp/tests/: test_tools.py
mcp/xc_mcp/: __init__.py  judge.py  server.py
vscode-extension/: .vscodeignore  LICENSE  README.md  auth.xc  demo.xc  language-configuration.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
vscode-extension/media/: webview.js
vscode-extension/src/: extension.ts  xcParser.ts
vscode-extension/test/: parser.test.ts
vscode-extension/versions/: explained-code-1.0.0.vsix  explained-code-1.1.0.vsix  explained-code-1.2.0.vsix  explained-code-1.3.0.vsix  explained-code-1.4.0.vsix  explained-code-1.5.0.vsix  explained-code-1.6.0.vsix  explained-code-1.7.0.vsix  explained-code-2.0.0.vsix  explained-code-2.1.0.vsix  explained-code-2.2.0.vsix
